<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color" >

    <LinearLayout
        android:id="@+id/frm_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

        <RelativeLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp" >

            <ImageView
                android:id="@+id/iv_back"

                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/xml_button_trans_rect_bg_selector"
                android:scaleType="center"
                android:tint="@android:color/black"
                android:src="@drawable/menusmal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/contactus_title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/faq_title"
                android:id="@+id/title"
                android:textStyle="normal" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lv_menus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/frm_header"
        android:listSelector="@android:color/transparent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingBottom="60dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/txt1"
                android:text="@string/contactus_text1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_content" />

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="20dp"
             android:layout_gravity="center_horizontal">
             <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                 android:id="@+id/txt2"
                 android:textColor="@android:color/black"
                android:text="@string/contactus_text2"

                 android:textSize="@dimen/txt_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:gravity="center"
                android:text="@string/contactus_text3"
                android:textColor="#626c77"
                android:background="@drawable/xml_button_trans_rect_bg_selector"
                android:textSize="@dimen/txt_content" />
         </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>