<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color" >

    <ScrollView
        android:id="@+id/lv_menus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:listSelector="@android:color/transparent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/frm_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp" >

                    <ImageView
                        android:id="@+id/iv_back"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/xml_button_trans_rect_bg_selector"
                        android:scaleType="center"
                        android:src="@drawable/btn_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/yourdetails_title"
                        android:textColor="#222a33"
                        android:id="@+id/header"
                        android:textSize="@dimen/faq_header"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/frm_board"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="60dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp" >

                <!-- Your Details -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="left"
                    android:text="@string/yourdetails_subtitle1"
                    android:textColor="#222a33"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/signup_name"
                    android:inputType="text"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:textColor="#222a33"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#999999" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/signup_phone"
                    android:inputType="phone"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:textColor="#222a33"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#999999" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/signup_email"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:textColor="#222a33"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#999999" />

                <FrameLayout
                    android:id="@+id/frm_update_info"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/xml_button_rect" >

                    <TextView
                        android:id="@+id/tv_update_info"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/xml_button_trans_rect_bg_selector"
                        android:duplicateParentState="true"
                        android:gravity="center"
                        android:paddingBottom="2dp"
                        android:text="@string/yourdetails_update_info"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/button_font_size" />
                </FrameLayout>
                <!-- Your protection plan -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="left"
                    android:text="@string/yourdetails_subtitle3"
                    android:textColor="#2a3239"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_upgrade_plan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="TRIAL PLAN"
                        android:textColor="#e3bc4e"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/tv_remained_days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:paddingTop="1dp"
                        android:text="(5 days Left)"
                        android:textColor="#222a33"
                        android:textSize="15sp" />
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/frm_subscribe"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="10dp"
                    android:background="#e3bc4e" >

                    <TextView
                        android:id="@+id/tv_upgrade_member"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/xml_button_trans_rect_bg_selector"
                        android:duplicateParentState="true"
                        android:gravity="center"
                        android:paddingBottom="2dp"
                        android:text="@string/yourdetails_subscribe"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/button_font_size"
                        android:textStyle="bold" />
                </FrameLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="20dp"
                    android:background="#999999" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/yourdetails_subtitle4"
                    android:textColor="#6b8096"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <FrameLayout
                    android:id="@+id/frm_wifi_addresses"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/xml_button_rect" >

                    <TextView
                        android:id="@+id/tv_wifi_addresses"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/xml_button_trans_rect_bg_selector"
                        android:duplicateParentState="true"
                        android:gravity="center"
                        android:paddingBottom="2dp"
                        android:text="@string/yourdetails_wifi_addresses"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/button_font_size" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>